--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,11 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
-
     <style name="Theme.Proyecto_Agenda" parent="Base.Theme.Proyecto_Agenda" />
+
+    <style name="SplashTheme" parent="Theme.Proyecto_Agenda">
+        <item name="android:windowBackground">
+            @drawable/splashscreen
+        </item>
+    </style>
 </resources>
