--- a/app/src/main/res/layout/fragment_new_doc_indication.xml
+++ b/app/src/main/res/layout/fragment_new_doc_indication.xml
@@ -43,6 +43,7 @@
             android:id="@+id/IndicationImage"
             android:layout_width="250dp"
             android:layout_height="350dp"
+            android:scaleType="fitXY"
             android:src="@drawable/baseline_photo_camera_24"
             android:background="@color/grey_background"
             android:layout_gravity="center"
